--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vista-safari-server",
   "version": "1.0.0",
-  "main": "./dist/app.js",
+  "main": "./dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint:check": "eslint . --ext .js,.ts --config .eslintrc-config.js",
     "lint:fix": "eslint . --ext .js,.ts --fix --config .eslintrc-config.js",
