--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "lint:check": "eslint . --ext .js,.ts --config .eslintrc-config.js",
     "lint:fix": "eslint . --ext .js,.ts --fix --config .eslintrc-config.js",
     "prettier:check": "prettier --check .",
