--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "./dist/index.ts",
-      "use": "@vercel/node"
-    }
+      {
+          "src": "dist/index.js",
+          "use": "@vercel/node",
+          "config": { "includeFiles": ["dist/**"] }
+      }
   ],
-  "buildCommand": "yarn build && yarn start",
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "./dist/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-    }
+      {
+          "src": "/(.*)",
+          "dest": "dist/index.js"
+      }
   ]
 }
