--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,16 @@
   "version": 2,
   "builds": [
       {
-          "src": "dist/index.js",
+          "src": "dist/app.js",
           "use": "@vercel/node",
           "config": { "includeFiles": ["dist/**"] }
       }
   ],
+  "buildCommand": "yarn start",
   "routes": [
       {
           "src": "/(.*)",
-          "dest": "dist/index.js"
+          "dest": "dist/app.js"
       }
   ]
 }
